AWS/linux/CloudFormation/AWS-CF-Linux/template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Jira 2136 test template

Parameters:
  KeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: "The key pair that will be used if SSH access is required"

  Owner:
    Type: String
    Description: Who is deploying this template?

  Purpose:
    Type: String
    Description: Why are you deploying this template?

Resources:
  FMEVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: "FMEVPC"
        - Key: Owner
          Value: !Ref Owner
        - Key: Purpose
          Value: !Ref Purpose
  
  FMEInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: "FMEInternetGateway"
        - Key: Owner
          Value: !Ref Owner
        - Key: Purpose
          Value: !Ref Purpose
  
  attachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId:
        Ref: FMEInternetGateway
      VpcId:
        Ref: FMEVPC

  FMERouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: FMEVPC
      Tags:
        - Key: Name
          Value: "FMERouteTable"
        - Key: Owner
          Value: !Ref Owner
        - Key: Purpose
          Value: !Ref Purpose

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: attachGateway
    Properties:
      RouteTableId:
        Ref: FMERouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref FMEInternetGateway

  mainSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ca-central-1a
      VpcId: !Ref FMEVPC
      CidrBlock: 10.0.0.0/20
      Tags:
        - Key: Name
          Value: "FMEMainSubnet"
        - Key: Owner
          Value: !Ref Owner
        - Key: Purpose
          Value: !Ref Purpose
  
  dbSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ca-central-1b
      VpcId: !Ref FMEVPC
      CidrBlock: 10.0.16.0/20
      Tags:
        - Key: Name
          Value: "dbSubnet"
        - Key: Owner
          Value: !Ref Owner
        - Key: Purpose
          Value: !Ref Purpose

  rdsDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for FME RDS DB
      SubnetIds:
        - !Ref mainSubnet
        - !Ref dbSubnet
      Tags:
        - Key: Name
          Value: "FMEVPC"
        - Key: Owner
          Value: !Ref Owner
        - Key: Purpose
          Value: !Ref Purpose
  
  associateSubnet:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: FMERouteTable
      SubnetId:
        Ref: mainSubnet

  FMEServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: template security group for ec2 instances
      GroupName: FMEServerSecurityGroup
      VpcId:
        Ref: FMEVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 7500
          ToPort: 7501
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 7100
          ToPort: 7200
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 7069
          ToPort: 7082
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 20
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Owner
          Value: !Ref Owner
        - Key: Purpose
          Value: !Ref Purpose
      
  sgSelfIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref FMEServerSecurityGroup
      IpProtocol: -1
      SourceSecurityGroupId: !Ref FMEServerSecurityGroup

  FMEDatabase:
    Type: AWS::RDS::DBInstance
    Properties: 
      AllocatedStorage: 20
      AvailabilityZone: ca-central-1a
      DBInstanceClass: db.t3.micro
      DBSubnetGroupName: !Ref rdsDBSubnetGroup
      Engine: postgres
      LicenseModel: postgresql-license
      MasterUsername: postgres
      MasterUserPassword: postgres
      MultiAZ: false
      Port: 5432
      PubliclyAccessible: false
      VPCSecurityGroups: 
        - !Ref FMEServerSecurityGroup
      Tags:
        - Key: Name
          Value: "FMEDatabase"
        - Key: Owner
          Value: !Ref Owner
        - Key: Purpose
          Value: !Ref Purpose

  FMEServerSystemShare:
    Type: AWS::EFS::FileSystem
    Properties: 
      AvailabilityZoneName: ca-central-1a
      PerformanceMode: generalPurpose
      FileSystemTags:
        - Key: Name
          Value: "FMEServerSystemShare"
        - Key: Owner
          Value: !Ref Owner
        - Key: Purpose
          Value: !Ref Purpose

  systemShareMountTarget:
    Type: AWS::EFS::MountTarget
    Properties: 
      FileSystemId: !Ref FMEServerSystemShare
      SecurityGroups: 
        - !Ref FMEServerSecurityGroup
      SubnetId: !Ref mainSubnet
  
  eip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: "FMECoreEIP"
        - Key: Owner
          Value: !Ref Owner
        - Key: Purpose
          Value: !Ref Purpose

  coreServer:
    Type: AWS::EC2::Instance
    DependsOn:
      - FMEDatabase
      - eip
      - systemShareMountTarget
    Properties:
      AvailabilityZone: ca-central-1a
      ImageId: ami-0801628222e2e96d6
      InstanceType: t3.medium
      SecurityGroupIds:
        - !Ref FMEServerSecurityGroup
      SubnetId: !Ref mainSubnet
      KeyName:
        Ref: KeyPair
      BlockDeviceMappings: 
      - DeviceName: "/dev/sda1"
        Ebs:
          VolumeSize: "20"
      Tags:
        - Key: Name
          Value: "Core Instance"
        - Key: Owner
          Value: !Ref Owner
        - Key: Purpose
          Value: !Ref Purpose
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          cd /
          apt-get update
          sleep 10
          apt-get install -y zip unzip git binutils make postgresql-client
          git clone https://github.com/aws/efs-utils
          cd efs-utils
          make deb
          apt-get install -y ./build/amazon-efs-utils*deb
          cd /mnt
          mkdir efs
          cd efs
          mkdir fs1
          mount -t efs -o tls ${FMEServerSystemShare}:/ fs1
          chmod 777 fs1
          cd fs1
          printf "FEATURE_FMEServerDatabase_INSTALL=No\n" > install.cfg
          printf "FMESERVERHOSTNAME=${eip}\n" >> install.cfg
          printf "FMESERVERSHAREDDATA=/mnt/efs/fs1/fmeserver\n" >> install.cfg
          printf "DATABASETYPE=PostGreSQL\n" >> install.cfg
          printf "DATABASEHOST=${FMEDatabase.Endpoint.Address}\n" >> install.cfg
          printf "DATABASEPORT=${FMEDatabase.Endpoint.Port}\n" >> install.cfg
          printf "DATABASEUSER=fmeserver\n" >> install.cfg
          printf "DATABASEPASSWORD=fmeserver" >> install.cfg
          mkdir fmeserver
          chmod 777 fmeserver
          chown fmeserver /mnt/efs/fs1/fmeserver
          wget https://downloads.safe.com/fme/2021/fme-server-2021.1.3-b21631-linux~ubuntu.20.04.run
          mkdir /usr/share/desktop-directories/
          chmod +x ./fme-server-2021.1.3-b21631-linux~ubuntu.20.04.run
          ./fme-server-2021.1.3-b21631-linux~ubuntu.20.04.run -- --file install.cfg
          cd /opt/fmeserver/Server/database/postgresql
          export PGPASSWORD='postgres'; psql -U postgres -d postgres -h ${FMEDatabase.Endpoint.Address} -p ${FMEDatabase.Endpoint.Port} -c "CREATE USER fmeserver WITH PASSWORD 'fmeserver';" &> createUserLog.txt
          export PGPASSWORD='postgres'; psql -U postgres -d postgres -h ${FMEDatabase.Endpoint.Address} -p ${FMEDatabase.Endpoint.Port} -f postgresql_createDB.sql &> createDBLog.txt
          export PGPASSWORD='fmeserver'; psql -U fmeserver -d fmeserver -h ${FMEDatabase.Endpoint.Address} -p ${FMEDatabase.Endpoint.Port} -f postgresql_createSchema.sql &> createSchemaLog.txt
          cd /opt/fmeserver/Utilities/tomcat/webapps/fmerest/WEB-INF/conf
          sed -i 's/FME_SERVER_PORT_POOL=0/FME_SERVER_PORT_POOL=7100-7200/' propertiesFile.properties
          cd /opt/fmeserver/Utilities/tomcat/webapps/fmedatadownload/WEB-INF/conf
          sed -i 's/FME_SERVER_PORT_POOL=0/FME_SERVER_PORT_POOL=7100-7200/' propertiesFile.properties
          cd /opt/fmeserver/Utilities/tomcat/webapps/fmedatastreaming/WEB-INF/conf
          sed -i 's/FME_SERVER_PORT_POOL=0/FME_SERVER_PORT_POOL=7100-7200/' propertiesFile.properties
          cd /opt/fmeserver/Utilities/tomcat/webapps/fmejobsubmitter/WEB-INF/conf
          sed -i 's/FME_SERVER_PORT_POOL=0/FME_SERVER_PORT_POOL=7100-7200/' propertiesFile.properties
          cd /opt/fmeserver/Utilities/tomcat/webapps/fmenotification/WEB-INF/conf
          sed -i 's/FME_SERVER_PORT_POOL=0/FME_SERVER_PORT_POOL=7100-7200/' propertiesFile.properties
          cd /opt/fmeserver/Server
          sed -i 's/FME_SERVER_PORT_POOL=0/FME_SERVER_PORT_POOL=7100-7200/' fmeServerConfig.txt
          ./startServer.sh
  
  dynamicEngineServer:
    Type: AWS::EC2::Instance
    DependsOn: coreServer
    Properties:
      AvailabilityZone: ca-central-1a
      ImageId: ami-0801628222e2e96d6
      InstanceType: t3.medium
      KeyName: !Ref KeyPair
      NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet: 
            - Ref: FMEServerSecurityGroup
          SubnetId: 
            Ref: mainSubnet
      BlockDeviceMappings: 
      - DeviceName: "/dev/sda1"
        Ebs:
          VolumeSize: "20"
      Tags:
        - Key: Name
          Value: "Engine Instance"
        - Key: Owner
          Value: !Ref Owner
        - Key: Purpose
          Value: !Ref Purpose
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          cd /
          apt-get update
          sleep 10
          apt-get install -y zip unzip git binutils make
          git clone https://github.com/aws/efs-utils
          cd efs-utils
          make deb
          apt-get install -y ./build/amazon-efs-utils*deb
          cd /mnt
          mkdir efs
          cd efs
          mkdir fs1
          mount -t efs -o tls ${FMEServerSystemShare}:/ fs1
          chmod 777 fs1
          cd fs1
          printf "FEATURE_FMEServerDatabase_INSTALL=No\n" > install_engine.cfg
          printf "FEATURE_Services_INSTALL=No\n" >> install_engine.cfg
          printf "FEATURE_ServerConsole_INSTALL=No\n" >> install_engine.cfg
          printf "FEATURE_FMEServerDatabase_INSTALL=No\n" >> install_engine.cfg
          dns=$(curl http://169.254.169.254/latest/meta-data/public-hostname)
          printf "NODENAME=%s\n" $dns >> install_engine.cfg
          printf "FMESERVERHOSTNAME=${eip}\n" >> install_engine.cfg
          printf "FMESERVERSHAREDDATA=/mnt/efs/fs1/fmeserver\n" >> install_engine.cfg
          printf "DATABASETYPE=PostGreSQL\n" >> install_engine.cfg
          printf "DATABASEHOST=${FMEDatabase.Endpoint.Address}\n" >> install_engine.cfg
          printf "DATABASEPORT=${FMEDatabase.Endpoint.Port}\n" >> install_engine.cfg
          printf "DATABASEUSER=fmeserver\n" >> install_engine.cfg
          printf "DATABASEPASSWORD=fmeserver" >> install_engine.cfg
          sleep 600
          chmod +x ./fme-server-2021.1.3-b21631-linux~ubuntu.20.04.run
          chown fmeserver /mnt/efs/fs1/fmeserver
          mkdir /usr/share/desktop-directories/
          mkdir /opt/fmeserver/
          chmod 777 /opt/fmeserver/
          ./fme-server-2021.1.3-b21631-linux~ubuntu.20.04.run -- --file install_engine.cfg
          cd /opt/fmeserver/Server
          sed -i '/^TEMPLATE_START_ENGINE=/ s/$/ -ENGINE_TYPE DYNAMIC/' processMonitorConfigEngines.txt
          ./startEngines.sh

  associateEIP:
    Type: AWS::EC2::EIPAssociation
    Properties: 
      AllocationId: !GetAtt eip.AllocationId
      InstanceId: !Ref coreServer

Outputs:
  FMEWebUI:
    Description: The address at which the FME server web UI can be accessed
    Value: !Join [ "", ["http://", !Ref eip, ":8080/fmeserver"] ]
